--- a/app/src/main/res/layout/frame_faxian.xml
+++ b/app/src/main/res/layout/frame_faxian.xml
@@ -5,4 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/fa_title"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:text="*发现身边的故事*"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:gravity="center|bottom"
+        android:textColor="@color/color3Pink"/>
+
+    <ListView
+        android:id="@+id/l_record"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/color4Pink"
+        android:dividerHeight="5pt" />
 </LinearLayout>
