--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorPrimary">#ff80ab</color>
+    <color name="colorPrimaryDark">#f48fb0</color>
+    <color name="colorAccent">#ffffff</color>
+    <color name="color1Pink">#ff80ab</color>
+    <color name="color2Pink">#ff4080</color>
+    <color name="color3Pink">#f48fb0</color>
+    <color name="color4Pink">#fce4ec</color>
 </resources>
