--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@mipmap/pink2"
     tools:context=".PasswordActivity">
 
     <TextView
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
 
         android:textSize="15sp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -75,7 +76,7 @@
         android:ems="10"
         android:inputType="numberPassword"
         android:layout_marginTop="2dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:gravity="center"
@@ -83,10 +84,12 @@
 
     <Button
         android:id="@+id/btn_repass"
-        android:layout_width="match_parent"
+        android:layout_width="71dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="90dp"
+        android:background="@mipmap/reset"
         android:onClick="rePass"
-        android:text="重置"
+        android:text=""
         android:textSize="20sp" />
 </LinearLayout>
