--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="449dp"
+        android:layout_height="447dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:src="@mipmap/end" />
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="55dp"
-        android:background="#8030"
+        android:background="@color/colortou"
         android:onClick="onClick"
         android:text="立即体验"
         android:textSize="20sp" />
