--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="color2Pink">#ff4080</color>
     <color name="color3Pink">#f48fb0</color>
     <color name="color4Pink">#fce4ec</color>
+    <color name="colortou">#fafafa</color>
 </resources>
