--- a/app/src/main/res/layout/activity_que.xml
+++ b/app/src/main/res/layout/activity_que.xml
@@ -5,7 +5,7 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color4Pink"
+    android:background="@mipmap/record"
     tools:context=".QueActivity">
 
     <TextView
@@ -14,38 +14,41 @@
         android:layout_height="wrap_content"
         android:gravity="center|bottom"
         android:text="我的发现"
+        android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="@color/color3Pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editText_ques"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:ems="10"
-        android:gravity="top"
-        android:inputType="textMultiLine"
-        android:maxLines="14"
-        android:minLines="1"
-        android:hint="输入你的新发现"
-        android:scrollbars="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_question" />
 
     <Button
         android:id="@+id/btn_OK"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:background="@color/color4Pink"
+        android:layout_width="wrap_content"
+        android:layout_height="69dp"
+        android:layout_marginBottom="16dp"
+        android:background="@mipmap/ok"
         android:onClick="getOk"
-        android:text="I am OK"
+        android:text=""
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editText_ques"
+        android:layout_width="334dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:hint="输入你的新发现"
+        android:textColorHint="@color/color3Pink"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_question" />
 </android.support.constraint.ConstraintLayout>
