--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/background_register"
     android:orientation="vertical"
     tools:context=".RegisterActivity">
 
@@ -18,6 +19,7 @@
         android:ems="10"
         android:hint="请输入昵称："
         android:text=""
+        android:textStyle="bold"
         android:inputType="textPersonName" />
 
     <EditText
@@ -29,6 +31,7 @@
         android:layout_marginBottom="6dp"
         android:ems="10"
         android:hint="请输入手机号："
+        android:textStyle="bold"
         android:text=""
         android:inputType="textPersonName" />
 
@@ -42,16 +45,16 @@
         android:ems="10"
         android:hint="请输入密码："
         android:text=""
+        android:textStyle="bold"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="61dp"
         android:layout_gravity="center"
         android:layout_marginTop="200dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="getRegister"
-        android:text="注册" />
+        android:background="@mipmap/reregister"
+        android:onClick="getRegister" />
 
 </LinearLayout>
