--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -9,11 +9,9 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <ImageView
+    <TextView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="449dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:src="@mipmap/first" />
+        android:layout_height="match_parent"
+        android:background="@mipmap/numberf" />
 </FrameLayout>
